# data-product-forge-custom-scaffold

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/getting-started/: README.md
docs/reference/: manifest-format.md
docs/walkthrough/: build-a-yaml-bundle.md  from-git-bundle.md  python-plugin-bundle.md  reproducible-updates.md
examples/acme-scaffold/: README.md  pyproject.toml
examples/acme-scaffold/sample/: contract.acme.yaml
examples/acme-scaffold/sample/bundle/: fluid-scaffold.yaml
examples/acme-scaffold/sample/bundle/templates/: README.md.j2
examples/acme-scaffold/src/acme_scaffold/: __init__.py  dialect.py
src/data_product_forge_custom_scaffold/: __init__.py  cli.py  context.py  dialect.py  engine.py  lockfile.py  manifest.py  renderer.py  templated.py  update.py  validation.py  version.py
src/data_product_forge_custom_scaffold/resolvers/: __init__.py  base.py  entrypoint.py  git.py  path.py
src/data_product_forge_custom_scaffold/schemas/: custom-scaffold.v1.json
tests/fixtures/reference_bundle/: fluid-scaffold.yaml
tests/fixtures/reference_bundle/static/docs/: runbook.md
tests/fixtures/reference_bundle/templates/: .gitlab-ci.yml.j2  README.md.j2
tests/integration/: test_fluid_cli_cross_package.py  test_round_trip.py
tests/unit/: test_cli_dispatch.py  test_cli_print_schema.py  test_dialect.py  test_docs_accuracy.py  test_engine_error_isolation.py  test_engine_fixes.py  test_entrypoint_allow_block.py  test_entrypoint_resolver.py  test_git_resolver.py  test_lockfile.py  test_lockfile_pin.py  test_manifest.py  test_no_jsonschema_on_register.py  test_path_resolver.py  test_renderer_symlink_safety.py  test_reserved_field_enforcement.py  test_schema_reserved_fields.py  test_schema_resource.py  test_update.py  test_validation.py
