[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-product-forge-custom-scaffold"
version = "0.1.0"
description = "Custom-scaffold engine for FLUID — install, plug in any scaffold bundle (Python plugin or YAML/Jinja), generate a complete project from your contract"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "FLUID Community"},
]
keywords = [
    "fluid",
    "data-products",
    "custom-scaffold",
    "scaffolding",
    "code-generation",
    "ci-cd",
    "plugin",
    "templates",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

dependencies = [
    "fluid-sdk>=1.0.0",      # role-typed ABCs + ContractHelper
    "Jinja2>=3.1",           # template engine for YAML/Jinja bundles
    "PyYAML>=6.0",           # parse fluid-scaffold.yaml manifests
    "jsonschema>=4.17",      # validate contract.extensions.customScaffold
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
]

# ─── How the FLUID CLI discovers this engine ────────────────────────
#
# 1. CLI subcommand: `fluid generate custom-scaffold`
[project.entry-points."fluid_build.commands"]
generate-custom-scaffold = "data_product_forge_custom_scaffold.cli:register"

# 2. Contract-validation hook for the `extensions.customScaffold` block
[project.entry-points."fluid_build.extension_validators"]
customScaffold = "data_product_forge_custom_scaffold.validation:validate"

[project.urls]
Documentation = "https://github.com/fluid-build/data-product-forge-custom-scaffold#readme"
Repository = "https://github.com/fluid-build/data-product-forge-custom-scaffold"
Issues = "https://github.com/fluid-build/data-product-forge-custom-scaffold/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
data_product_forge_custom_scaffold = ["py.typed", "schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests (filesystem)",
    "network: requires network access (git clone, npm/pip fetch)",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "N"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]
